--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+===== Alpha 20220924 =====
+20220924
+
+* 贴库球的瞄准线长度惩罚
+* 暂时停用了贴图
+* 加入了选手特殊出杆习惯动画
+* 修改了运杆动画速度
+* 修改了侧旋效果
+* 修复了斯诺克延分争黑球的问题
+* 斯诺克AI开球加塞
+
 ===== 1.0-ALPHA-1 =====
 20220809
 
