一个将就可以用的版本

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,15 @@
+===== Alpha 20221011 =====
+
+* 击球力量随击球点递减
+
+===== Alpha 20220926 =====
+20220926
+
+* 加入了AI解斯诺克能力的配置项
+* 修复了回放的bug
+* 修复了黑八认输后winningPlayer是null的问题
+* 修复了黑八故意打进黑球不算输的bug
+
 ===== Alpha 20220924 =====
 20220924
 
