--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,18 @@
+===== Alpha 20230121 =====
+
+* 杆的纹理
+* 解决了贴图旋转的问题
+* 目标球瞄准延长线改为双线
+* 修改了一些物理常数
+
+===== Alpha 20221214 =====
+
+* 加入了架杆机制
+* 加入了更多统计: 解球、走位、架杆成功率
+* 修复了滑杆鬼畜的问题
+* 修复了回放列表的bug
+* 把台泥改滑了一点
+
 ===== Alpha 20221011 =====
 
 * 击球力量随击球点递减
