--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,16 @@
+===== Alpha 20230123 =====
+
+* 重构了table ball rule
+* 袋口重力变线
+* bug修复：斯诺克清彩时白球与彩球同时落袋
+* 物理调整：小力杆法
+
 ===== Alpha 20230121 =====
 
 * 杆的纹理
 * 解决了贴图旋转的问题
 * 目标球瞄准延长线改为双线
+* 齿轮效应
 * 修改了一些物理常数
 
 ===== Alpha 20221214 =====
