--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+===== Alpha 20230302 =====
+
+* K球优化
+* 界面更新
+* 力度控制的随机系统更新
+* 可能修复了一些match tree的bug
+* 将回放和记录移至Entry view
+* 架杆力度控制的误差由actual power改为selected power决定
+* AI球员选择参不参加不重要的比赛
+
 ===== Alpha 20230227 =====
 
 * 生涯模式黑八支持
