--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+===== Alpha 20230303 =====
+
+* AI多线程防守运算
+* 键盘控制
+* 玩家击球时初始自动对准最简单的目标球
+* 修复了数据库的bug
+* atan2
+
 ===== Alpha 20230302.2 =====
 
 * AI多线程进攻运算
