--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+===== Alpha 20230310.4 =====
+
+* 调整了AI评估进攻难度的方式: 不看出杆了
+* Career cache info
+* 暗改了一些数据
+* 更多英文
+
 ===== Alpha 20230310.3 =====
 
 * 信息弹出框超时自动关闭
