--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -7,9 +7,11 @@ yes=Yes
 no=No
 pleaseConfirm=Please Confirm
 warning=Warning
+close=Close
 
 # Entry UI
 career=Player
+level=Level
 continueCareer=Continue
 createCareer=New Career
 deleteCareer=Delete
@@ -141,6 +143,104 @@ targetBlackHitOther=Target is number 8, other ball hit
 # Alerts
 confirmDeleteCareer=Confirm deleting "%s"?
 deletePlayerWithCareer=Also delete player person
+
+# Career UI
+restorePerks=Restore
+applyPerks=Apply
+worldRanking=World ranking
+rankingType=Ranking method
+rankRank=Rank
+rankName=Player
+rankAwards=Awards
+rankTotalAwards=Career awards
+continueTour=Continue
+tourInProgress=In progress
+nextTour=Next event
+enrol=Enrol
+start=Start
+skip=Skip
+bestRankedScore=Highest in ranked tournaments: 
+none=None
+numRankedChamps=Ranked champions: 
+numSnookerThreeChamps=Triple crowns: 
+gameEvent=Events
+achievement=Achievement
+awards=Awards
+rankedGame=Ranked
+nonRankedGame=Non-ranked
+selRegular=Regular
+selSingleSeason=Single season
+selAllChamp=All champs
+
+# Rank enums
+champion=Champion
+secondPlace=Second Place
+top4=Top 4
+top8=Top 8
+top16=Top 16
+top32=Top 32
+top64=Top 64
+preGames4=Qualifier round 4
+preGames3=Qualifier round 3
+preGames2=Qualifier round 2
+preGames1=Qualifier round 1
+bestSingle=Highest single
+maximum=147
+
+# Stage enums
+final=Final
+semiFinal=Semifinal
+quarterFinal=Quarterfinal
+round3=Round 3
+round2=Round 2
+round1=Round 1
+preRound4=Qualifier round 4
+preRound3=Qualifier round 3
+preRound2=Qualifier round 2
+preRound1=Qualifier round 1
+
+# Champ draw UI
+startNextRound=Next round
+rankTitle=Title
+continueMatch=Continue match
+performAllMatches=Perform all
+undetermined=N/A
+
+# Stats UI
+statsMatches=比赛
+statsAttacks=进攻次数
+statsAttacksSuc=进攻成功次数
+statsAttacksSucRate=进攻成功率
+statsLongAttacks=长台进攻次数
+statsLongAttacksSuc=长台进攻成功次数
+statsLongAttacksSucRate=长台进攻成功率
+statsRestAttacks=架杆进攻次数
+statsRestAttacksSuc=架杆进攻成功次数
+statsPositions=走位次数
+statsPositionsSuc=走位成功次数
+statsDefenses=防守次数
+statsDefensesSuc=防守成功次数
+statsEscapes=解球次数
+statsEscapesSuc=解球成功次数
+totalPoints=总得分
+bestSinglePoints=单杆最高分
+single50=单杆50+
+single100=单杆100+
+single147=单杆147
+numBreaks=开球次数
+numBreaksSuc=开球进球次数
+breaksSucRatio=开球成功率
+breakClears=炸清
+continueClears=接清
+highestSingleBalls=最高单杆球数
+matchStats=对局统计
+totalMatches=Total matches
+totalMatchesWin=Total matches won
+totalFramesLife=Total frames
+totalFramesLifeWin=Total frames won
+bestOfNFrames=%d frame %d win
+boNStats=%d matches, %d wins
+queryRecords=Query records
 
 # Enum names
 snooker=Snooker
