--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -7,9 +7,11 @@ yes=是
 no=否
 pleaseConfirm=请确认
 warning=警告
+close=关闭
 
 # Entry UI
 career=玩家
+level=等级
 continueCareer=继续游戏
 createCareer=开始新游戏
 deleteCareer=删除存档
@@ -141,6 +143,104 @@ targetBlackHitOther=目标球为8号球，但击打了其他球
 # Alerts
 confirmDeleteCareer=确认要删除“%s”?
 deletePlayerWithCareer=同时删除此球员
+
+# Career UI
+restorePerks=重置
+applyPerks=确定分配
+worldRanking=世界排名
+rankingType=排名方式
+rankRank=排名
+rankName=球员
+rankAwards=奖金
+rankTotalAwards=生涯总奖金
+continueTour=继续
+tourInProgress=正在进行的比赛
+nextTour=下项赛事
+enrol=报名
+start=开始
+skip=跳过
+bestRankedScore=排名赛最佳成绩：
+none=无
+numRankedChamps=排名赛冠军数：
+numSnookerThreeChamps=三大赛冠军数：
+gameEvent=赛事
+achievement=成绩
+awards=奖金
+rankedGame=排名赛
+nonRankedGame=非排名赛
+selRegular=常规
+selSingleSeason=单赛季
+selAllChamp=全冠军
+
+# Rank enums
+champion=冠军
+secondPlace=亚军
+top4=四强
+top8=八强
+top16=十六强
+top32=三十二强
+top64=六十四强
+preGames4=资格赛第四轮
+preGames3=资格赛第三轮
+preGames2=资格赛第二轮
+preGames1=资格赛第一轮
+bestSingle=单杆最高
+maximum=147
+
+# Stage enums
+final=决赛
+semiFinal=半决赛
+quarterFinal=四分之一决赛
+round3=第三轮
+round2=第二轮
+round1=第一轮
+preRound4=资格赛第四轮
+preRound3=资格赛第三轮
+preRound2=资格赛第二轮
+preRound1=资格赛第一轮
+
+# Champ draw UI
+startNextRound=开始下一轮
+rankTitle=头衔
+continueMatch=继续比赛
+performAllMatches=进行所有比赛
+undetermined=待定
+
+# Stats UI
+statsMatches=比赛
+statsAttacks=进攻次数
+statsAttacksSuc=进攻成功次数
+statsAttacksSucRate=进攻成功率
+statsLongAttacks=长台进攻次数
+statsLongAttacksSuc=长台进攻成功次数
+statsLongAttacksSucRate=长台进攻成功率
+statsRestAttacks=架杆进攻次数
+statsRestAttacksSuc=架杆进攻成功次数
+statsPositions=走位次数
+statsPositionsSuc=走位成功次数
+statsDefenses=防守次数
+statsDefensesSuc=防守成功次数
+statsEscapes=解球次数
+statsEscapesSuc=解球成功次数
+totalPoints=总得分
+bestSinglePoints=单杆最高分
+single50=单杆50+
+single100=单杆100+
+single147=单杆147
+numBreaks=开球次数
+numBreaksSuc=开球进球次数
+breaksSucRatio=开球成功率
+breakClears=炸清
+continueClears=接清
+highestSingleBalls=最高单杆球数
+matchStats=对局统计
+totalMatches=总场次
+totalMatchesWin=总胜场
+totalFramesLife=总局数
+totalFramesLifeWin=总胜局数
+bestOfNFrames=%d局%d胜制
+boNStats=%d场%d胜
+queryRecords=查询记录
 
 # Enum names
 snooker=斯诺克
