--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+===== Alpha 20230311 =====
+
+* 加入了AI被打rua的设定
+* 加入了交替/赢家/输家开球的设定
+* 斯诺克打彩球时指定目标球
+* 黑八线后自由球
+
 ===== Alpha 20230310.4 =====
 
 * 调整了AI评估进攻难度的方式: 不看出杆了
