--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -110,6 +110,8 @@ snookerThreeWarning=The next foul and miss will cause you to lose this frame sin
 reposition=reposition
 aiAskReposition=AI ask to reposition
 
+askSnookerTarget=Please indicate target ball
+
 # Snooker balls
 redBall=red
 yellowBall=yellow
@@ -131,6 +133,7 @@ targetXOtherHit=Target is %s, other ball hit
 targetXHitY=Target is %s, %s hit
 targetColorOtherPot=Non target pots while target is a colored ball
 foulReasonFormat=%s, %d penalty
+indicateXHitY=Indicated target is %s, %s hit
 
 noBallHitCushion=No ball pots or hits cushion
 breakFreeMustOut=Direct free ball must have target outside breaking area
