--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -110,6 +110,8 @@ snookerThreeWarning=有目标球可见，但已经两次未击中，如再不击
 reposition=复位
 aiAskReposition=AI要求复位。
 
+askSnookerTarget=请指定目标球
+
 # Snooker balls
 redBall=红球
 yellowBall=黄球
@@ -131,6 +133,7 @@ targetXOtherHit=目标球为%s，但击打了其他球
 targetXHitY=目标球为%s，但击打了%s
 targetColorOtherPot=击打彩球时有非目标球落袋
 foulReasonFormat=%s，罚%d分
+indicateXHitY=指定目标球为%s，但击打了%s
 
 noBallHitCushion=没有任何球接触库边或落袋
 breakFreeMustOut=开球直接造成的自由球必须击打开球区以外的球
