--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -174,6 +174,10 @@ nonRankedGame=Non-ranked
 selRegular=Regular
 selSingleSeason=Single season
 selAllChamp=All champs
+seeToursList=See events list
+eventTime=Date
+eventRule=Type
+historyChampions=History champions
 
 # Rank enums
 champion=Champion
@@ -274,9 +278,11 @@ sexF=F
 snookerTable=Snooker
 chineseEightTable=Chinese Eight-Ball
 sidePocketTable=Side Pocket
+pocketHuge=Huge
 pocketLarge=Large
 pocketStd=Standard
 pocketSmall=Small
+pocketLittle=Little
 
 typePlayer=Player
 typeComputer=Computer
