--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -174,6 +174,10 @@ nonRankedGame=非排名赛
 selRegular=常规
 selSingleSeason=单赛季
 selAllChamp=全冠军
+seeToursList=查看赛事列表
+eventTime=时间
+eventRule=类型
+historyChampions=历届冠军
 
 # Rank enums
 champion=冠军
@@ -274,9 +278,11 @@ sexF=女
 snookerTable=斯诺克台
 chineseEightTable=中式八球台
 sidePocketTable=美式九球台
+pocketHuge=特大
 pocketLarge=加大
 pocketStd=标准
-pocketSmall=小
+pocketSmall=较小
+pocketLittle=小
 
 typePlayer=玩家
 typeComputer=电脑
