--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -127,6 +127,7 @@ emptyCue=Miss
 cueBallPot=Cue ball potted
 wrongFreeBall=Wrong free ball hit
 targetRedColorPots=Colored ball pots while target is red
+targetRedHitX=Target is red, %s hit
 targetColorRedHit=Target is colored ball, red hit
 targetXRedHit=Target is %s, red hit
 targetXOtherHit=Target is %s, other ball hit
@@ -178,6 +179,11 @@ seeToursList=See events list
 eventTime=Date
 eventRule=Type
 historyChampions=History champions
+openTour=Open
+closedTour=Championship
+seedPlaces=Seeds
+mainPlaces=Mains
+preMatchPlaces=Qualifiers
 
 # Rank enums
 champion=Champion
