--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -127,6 +127,7 @@ emptyCue=空杆
 cueBallPot=白球落袋
 wrongFreeBall=击打了错误的自由球
 targetRedColorPots=目标球为红球，但有彩球落袋
+targetRedHitX=目标球为红球，但击打了%s
 targetColorRedHit=目标球为彩球，但击打了红球
 targetXRedHit=目标球为%s，但击打了红球
 targetXOtherHit=目标球为%s，但击打了其他球
@@ -178,6 +179,11 @@ seeToursList=查看赛事列表
 eventTime=时间
 eventRule=类型
 historyChampions=历届冠军
+openTour=公开赛
+closedTour=锦标赛
+seedPlaces=种子数量
+mainPlaces=正赛名额
+preMatchPlaces=资格赛名额
 
 # Rank enums
 champion=冠军
