--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+===== Alpha 20230313 =====
+
+* 卫冕冠军为一号种子
+* 调整了AI解球的权重：
+    * 加入白球行进距离
+    * 随机选前3个
+* 加入斯诺克无意识救球判定
+
 ===== Alpha 20230312.2 =====
 
 * 优化了界面：新增赛事概览
