--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -143,6 +143,7 @@ targetHalfHitBlack=Target is half balls, number 8 hit
 targetFullHitHalf=Target is full balls, half ball hit
 targetHalfHitFull=Target is half balls, full ball hit
 targetBlackHitOther=Target is number 8, other ball hit
+foulAndMiss=Foul and miss. 
 
 # Alerts
 confirmDeleteCareer=Confirm deleting "%s"?
