--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+===== 1.0-ALPHA-2 =====
+20230314
+
+* 修复了debug模式无法随意放置白球的问题
+* 加入了由台泥好坏决定的袋口重力范围大小
+* 优化了统计界面：玩家一栏只显示玩家真的用过的球员
+
 ===== Alpha 20230313 =====
 
 * 卫冕冠军为一号种子
