--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -290,6 +290,7 @@ pocketLarge=Large
 pocketStd=Standard
 pocketSmall=Small
 pocketLittle=Little
+pocketTiny=Tiny
 
 typePlayer=Player
 typeComputer=Computer
