--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+===== 1.0-ALPHA-3 ======
+20230314
+
+* 修复了检查斯诺克无意识救球认为斯诺克都无解的bug
+* 修复了不能建档的bug
+* 修复了回放中的一些bug
+* 未解决的bug：第一次打开回放时不显示球
+
 ===== Alpha 20230314 =====
 
 * 修复了AI忘记怎么k球的bug
