--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -164,9 +164,11 @@ nextTour=Next event
 enrol=Enrol
 start=Start
 skip=Skip
-bestRankedScore=Highest in ranked tournaments: 
+bestAnyScore=Best score: 
+bestRankedScore=Best in ranked tournaments: 
 none=None
-numRankedChamps=Ranked champions: 
+numAnyChamps=Champions: 
+numRankedChamps=Ranked champions:
 numSnookerThreeChamps=Triple crowns: 
 gameEvent=Events
 achievement=Achievement
