--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -164,8 +164,10 @@ nextTour=下项赛事
 enrol=报名
 start=开始
 skip=跳过
+bestAnyScore=最佳成绩：
 bestRankedScore=排名赛最佳成绩：
 none=无
+numAnyChamps=冠军数：
 numRankedChamps=排名赛冠军数：
 numSnookerThreeChamps=三大赛冠军数：
 gameEvent=赛事
