--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+===== Alpha 20230315 =====
+
+* 优化了数据统计界面
+* 修复了【记录-比赛】中GameRule串台的bug
+* 记录界面内针对黑八和九球的接清/炸清/小金/大金的显示优化
+* 禁用了hideCues，似乎修复了重摆手中球之后杆乱跑的bug
+
 ===== 1.0-ALPHA-3 ======
 20230314
 
