--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -248,6 +248,8 @@ numBreaksSuc=开球进球次数
 breaksSucRatio=开球成功率
 breakClears=炸清
 continueClears=接清
+bigGolds=大金
+smallGolds=小金
 highestSingleBalls=最高单杆球数
 matchStats=对局统计
 totalMatches=总场次
