--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+===== Alpha 20230317 =====
+
+* 勉强修复了第一次回放不显球的bug（通过自动重启）
+* 增加球员性别和身高的显示
+* 优化了比赛进程界面选杆的框
+* 修复了对手开球前认输直接算赢的bug
+* 修复了有些比赛明明无法报名但显示可以报名的bug
+* 修复了黑八开球位置的小bug
+* 回放系统更新：Primary version 12之后不依赖于playerPerson的json了
+* 调整了AI进攻权重：不准的选手进攻权重回调
+
 ===== Alpha 20230315 =====
 
 * 优化了数据统计界面
