--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -221,6 +221,9 @@ rankTitle=Title
 continueMatch=Continue match
 performAllMatches=Perform all
 undetermined=N/A
+congratSentence=Captures the {rank} of {match}!
+notCongratSentence=Knocked out in the {rank} stage of {match}!
+congratChampion=Congratulations, %s!
 
 # Stats UI
 statsMatches=比赛
