--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -221,6 +221,9 @@ rankTitle=头衔
 continueMatch=继续比赛
 performAllMatches=进行所有比赛
 undetermined=待定
+congratSentence=获得了{match}的{rank}!
+notCongratSentence=在{match}的{rank}被淘汰！
+congratChampion=恭喜%s!
 
 # Stats UI
 statsMatches=比赛
