--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+===== 0.1 =====
+20230317
+
+* 加入了新的规则：李式台球
+* 修复了球员存为json时出杆动作记录错误的问题
+* 加入了【帮助-关于】界面
+* 小的修复和调整
+
 ===== Alpha 20230317 =====
 
 * 勉强修复了第一次回放不显球的bug（通过自动重启）
