--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -19,6 +19,8 @@ fastGame=Fast Game
 fileMenu=File
 recordMenu=Records
 replayMenu=Replays
+helpMenu=Help
+aboutMenu=About
 
 # New Career UI
 difficulty=Difficulty
@@ -263,10 +265,14 @@ bestOfNFrames=%d frame %d win
 boNStats=%d matches, %d wins
 queryRecords=Query records
 
+# About UI
+studioName=Trash software studio
+
 # Enum names
 snooker=Snooker
 miniSnooker=Mini Snooker
 chineseEight=Chinese Eight-Ball
+lisEight=Li's Eight-Ball
 sidePocket=American Side Pocket
 
 snookerBall=Snooker Ball
