--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -19,6 +19,8 @@ fastGame=快速游戏
 fileMenu=文件
 recordMenu=记录
 replayMenu=回放
+helpMenu=帮助
+aboutMenu=关于
 
 # New Career UI
 difficulty=难度
@@ -263,10 +265,14 @@ bestOfNFrames=%d局%d胜制
 boNStats=%d场%d胜
 queryRecords=查询记录
 
+# About UI
+studioName=垃圾软件工作室
+
 # Enum names
 snooker=斯诺克
 miniSnooker=小斯诺克
 chineseEight=中式八球
+lisEight=李式八球
 sidePocket=美式九球
 
 snookerBall=斯诺克球
