--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+===== 0.1.0.1 =====
+
+* AI小幅调整：
+    * 下一杆也是纯进攻时才打纯进攻
+    * 大超分后只要有一点机会就纯进攻
+    * 小力中袋奖励
+* 修复了统计界面中炸清、接清显示错位的问题
+* 似乎修复了冠亚军不显示恭喜界面的问题
+* 修复了玩家私杆不保存的问题
+
 ===== 0.1 =====
 20230317
 
