--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
 ===== 0.1.0.1 =====
+20230318
 
 * AI小幅调整：
     * 下一杆也是纯进攻时才打纯进攻
@@ -7,6 +8,10 @@
 * 修复了统计界面中炸清、接清显示错位的问题
 * 似乎修复了冠亚军不显示恭喜界面的问题
 * 修复了玩家私杆不保存的问题
+* 加入了球员参赛限制
+* 新比赛：斯诺克冠中冠
+* 加入了呲杆的GUI提示
+* Mac的字体修复
 
 ===== 0.1 =====
 20230317
