--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -137,6 +137,7 @@ targetXHitY=Target is %s, %s hit
 targetColorOtherPot=Non target pots while target is a colored ball
 foulReasonFormat=%s, %d penalty
 indicateXHitY=Indicated target is %s, %s hit
+foulAndMiss=Foul and miss. 
 
 noBallHitCushion=No ball pots or hits cushion
 breakFreeMustOut=Direct free ball must have target outside breaking area
@@ -145,7 +146,9 @@ targetHalfHitBlack=Target is half balls, number 8 hit
 targetFullHitHalf=Target is full balls, half ball hit
 targetHalfHitFull=Target is half balls, full ball hit
 targetBlackHitOther=Target is number 8, other ball hit
-foulAndMiss=Foul and miss. 
+
+taunt=LOL
+miscued=Miscued!
 
 # Alerts
 confirmDeleteCareer=Confirm deleting "%s"?
@@ -160,15 +163,19 @@ rankRank=Rank
 rankName=Player
 rankAwards=Awards
 rankTotalAwards=Career awards
+rankNBigChamps=Seasonal Big Champions
+rankNChamps=Seasonal Champions
 continueTour=Continue
 tourInProgress=In progress
 nextTour=Next event
 enrol=Enrol
 start=Start
 skip=Skip
+achievementsOf=Achievements of %s
 bestAnyScore=Best score: 
 bestRankedScore=Best in ranked tournaments: 
 none=None
+participateGames=Game types: 
 numAnyChamps=Champions: 
 numRankedChamps=Ranked champions:
 numSnookerThreeChamps=Triple crowns: 
