--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -147,6 +147,9 @@ targetFullHitHalf=目标球为全色球，但击打了半色球
 targetHalfHitFull=目标球为半色球，但击打了全色球
 targetBlackHitOther=目标球为8号球，但击打了其他球
 
+taunt=哈哈哈
+miscued=呲杆了！
+
 # Alerts
 confirmDeleteCareer=确认要删除“%s”?
 deletePlayerWithCareer=同时删除此球员
@@ -160,15 +163,19 @@ rankRank=排名
 rankName=球员
 rankAwards=奖金
 rankTotalAwards=生涯总奖金
+rankNBigChamps=赛季重要冠军数
+rankNChamps=赛季冠军数
 continueTour=继续
 tourInProgress=正在进行的比赛
 nextTour=下项赛事
 enrol=报名
 start=开始
 skip=跳过
+achievementsOf=%s成绩
 bestAnyScore=最佳成绩：
 bestRankedScore=排名赛最佳成绩：
 none=无
+participateGames=参赛类型：
 numAnyChamps=冠军数：
 numRankedChamps=排名赛冠军数：
 numSnookerThreeChamps=三大赛冠军数：
@@ -179,7 +186,7 @@ rankedGame=排名赛
 nonRankedGame=非排名赛
 selRegular=常规
 selSingleSeason=单赛季
-selAllChamp=全冠军
+selAllChamp=冠中冠
 seeToursList=查看赛事列表
 eventTime=时间
 eventRule=类型
