--- a/changelog.txt
+++ b/changelog.txt
@@ -1,17 +1,18 @@
 ===== 0.1.0.1 =====
-20230318
+20230319
 
 * AI小幅调整：
     * 下一杆也是纯进攻时才打纯进攻
     * 大超分后只要有一点机会就纯进攻
     * 小力中袋奖励
-* 修复了统计界面中炸清、接清显示错位的问题
+* 优化了统计界面
 * 似乎修复了冠亚军不显示恭喜界面的问题
 * 修复了玩家私杆不保存的问题
 * 加入了球员参赛限制
-* 新比赛：斯诺克冠中冠
+* 新比赛：斯诺克冠中冠、黑八杨家坪中学杯
 * 加入了呲杆的GUI提示
 * Mac的字体修复
+* 比赛赞助商
 
 ===== 0.1 =====
 20230317
