--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -191,11 +191,14 @@ seeToursList=See events list
 eventTime=Date
 eventRule=Type
 historyChampions=History champions
+isRanked=Ranked: 
+isProfessional=Professional: 
 openTour=Open
 closedTour=Championship
 seedPlaces=Seeds
 mainPlaces=Mains
 preMatchPlaces=Qualifiers
+sponsor=Sponsor
 
 # Rank enums
 champion=Champion
@@ -236,25 +239,20 @@ congratChampion=Congratulations, %s!
 
 # Stats UI
 statsMatches=比赛
-statsAttacks=进攻次数
-statsAttacksSuc=进攻成功次数
-statsAttacksSucRate=进攻成功率
-statsLongAttacks=长台进攻次数
-statsLongAttacksSuc=长台进攻成功次数
-statsLongAttacksSucRate=长台进攻成功率
-statsRestAttacks=架杆进攻次数
-statsRestAttacksSuc=架杆进攻成功次数
-statsPositions=走位次数
-statsPositionsSuc=走位成功次数
-statsDefenses=防守次数
-statsDefensesSuc=防守成功次数
-statsEscapes=解球次数
-statsEscapesSuc=解球成功次数
-totalPoints=总得分
-bestSinglePoints=单杆最高分
-single50=单杆50+
-single100=单杆100+
-single147=单杆147
+statsAttempts=Attempts
+statsSuccess=Successes
+statsSuccessRate=Success Rate
+statsAttacks1=Pot
+statsLongAttacks1=Long pot
+statsRestAttacks1=Rest pot
+statsPositions1=Position
+statsDefenses1=Defense
+statsEscapes1=Snooker escape
+totalPoints=Total points
+highestBreak=Highest break
+single50=50+ breaks
+single100=100+ breaks
+single147=147
 numBreaks=开球次数
 numBreaksSuc=开球进球次数
 breaksSucRatio=开球成功率
