--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -191,11 +191,14 @@ seeToursList=查看赛事列表
 eventTime=时间
 eventRule=类型
 historyChampions=历届冠军
+isRanked=排名赛：
+isProfessional=职业赛：
 openTour=公开赛
 closedTour=锦标赛
 seedPlaces=种子数量
 mainPlaces=正赛名额
 preMatchPlaces=资格赛名额
+sponsor=赞助商
 
 # Rank enums
 champion=冠军
@@ -236,22 +239,17 @@ congratChampion=恭喜%s!
 
 # Stats UI
 statsMatches=比赛
-statsAttacks=进攻次数
-statsAttacksSuc=进攻成功次数
-statsAttacksSucRate=进攻成功率
-statsLongAttacks=长台进攻次数
-statsLongAttacksSuc=长台进攻成功次数
-statsLongAttacksSucRate=长台进攻成功率
-statsRestAttacks=架杆进攻次数
-statsRestAttacksSuc=架杆进攻成功次数
-statsPositions=走位次数
-statsPositionsSuc=走位成功次数
-statsDefenses=防守次数
-statsDefensesSuc=防守成功次数
-statsEscapes=解球次数
-statsEscapesSuc=解球成功次数
+statsAttempts=次数
+statsSuccess=成功次数
+statsSuccessRate=成功率
+statsAttacks1=进攻
+statsLongAttacks1=长台进攻
+statsRestAttacks1=架杆进攻
+statsPositions1=走位
+statsDefenses1=防守
+statsEscapes1=解球
 totalPoints=总得分
-bestSinglePoints=单杆最高分
+highestBreak=单杆最高分
 single50=单杆50+
 single100=单杆100+
 single147=单杆147
