--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+===== 0.1.1 =====
+20230320
+
+* 调整了底袋的角度，增加了袋口夹球的风险
+* 优化了回放按键
+* 增加了慢放功能
+* 修复了PlayerPerson保存后不存出杆特性的问题
+
 ===== 0.1.0.1 =====
 20230319
 
