--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -138,6 +138,7 @@ targetColorOtherPot=击打彩球时有非目标球落袋
 foulReasonFormat=%s，罚%d分
 indicateXHitY=指定目标球为%s，但击打了%s
 foulAndMiss=无意识救球。
+freeBallCannotSnooker=不允许使用自由球作为障碍球
 
 noBallHitCushion=没有任何球接触库边或落袋
 breakFreeMustOut=开球直接造成的自由球必须击打开球区以外的球
