--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -138,6 +138,7 @@ targetColorOtherPot=Non target pots while target is a colored ball
 foulReasonFormat=%s, %d penalty
 indicateXHitY=Indicated target is %s, %s hit
 foulAndMiss=Foul and miss. 
+freeBallCannotSnooker=Snookering with the free ball itself is not allowed.
 
 noBallHitCushion=No ball pots or hits cushion
 breakFreeMustOut=Direct free ball must have target outside breaking area
