--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -263,13 +263,15 @@ bigGolds=大金
 smallGolds=小金
 highestSingleBalls=最高单杆球数
 matchStats=对局统计
-totalMatches=Total matches
-totalMatchesWin=Total matches won
-totalFramesLife=Total frames
-totalFramesLifeWin=Total frames won
+totalMatches=Matches
+totalFramesLife=Frames
 bestOfNFrames=%d frame %d win
 boNStats=%d matches, %d wins
 queryRecords=Query records
+statsMatchesTitle=场次
+statsMatchesWinTitle=Wins
+statsWinRate=Win rate
+statsFinalsOver3=Final frames (≥3)
 
 # About UI
 studioName=Trash software studio
