--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -263,13 +263,15 @@ bigGolds=大金
 smallGolds=小金
 highestSingleBalls=最高单杆球数
 matchStats=对局统计
-totalMatches=总场次
-totalMatchesWin=总胜场
-totalFramesLife=总局数
-totalFramesLifeWin=总胜局数
+totalMatches=场数
+totalFramesLife=局数
 bestOfNFrames=%d局%d胜制
 boNStats=%d场%d胜
 queryRecords=查询记录
+statsMatchesTitle=场次
+statsMatchesWinTitle=胜场
+statsWinRate=胜率
+statsFinalsOver3=决胜局(≥3)
 
 # About UI
 studioName=垃圾软件工作室
