--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+===== 0.1.3 =====
+20230402
+
+* 加入了球员出杆延伸长度的数值
+* 微调了AI，进一步降低突发恶疾推到袋口的情况
+* 优化了统计界面对百分比的显示：NaN显示为"--"
+* 显示斯诺克赛事的单杆最高（实际为记录每个球员在每届赛事的单杆最高）
+
 ===== 0.1.2 =====
 20230328
 
