--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -200,6 +200,7 @@ seedPlaces=Seeds
 mainPlaces=Mains
 preMatchPlaces=Qualifiers
 sponsor=Sponsor
+tournamentHighest=Highest break
 
 # Rank enums
 champion=Champion
