--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+===== 0.1.5 =====
+20230421
+
+* 实装了软性库边:
+    * 库边反弹由瞬间折返改为持续加速度
+* 调整了生涯模式AI的手感范围: 0.8~1.0 -> 0.85~1.15
+* 数据记录内加入生涯模式的比赛ID
+* 略微调小了中袋尺寸
+
 ===== 0.1.4 =====
 20230407
 
