--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+===== 0.1.7 =====
+20230424
+
+* 白球落位区域改为圆角多边形
+* 修复了快速游戏报错的bug
+
 ===== 0.1.6 =====
 20230422
 
@@ -10,7 +16,7 @@
 
 * 实装了软性库边:
     * 库边反弹由瞬间折返改为持续加速度
-* 调整了生涯模式AI的手感范围: 0.8~1.0 -> 0.85~1.15
+* 调整了生涯模式AI的手感浮动范围: 0.8~1.0 -> 0.85~1.15
 * 数据记录内加入生涯模式的比赛ID
 * 略微调小了中袋尺寸
 
