--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -134,6 +134,7 @@ targetColorRedHit=Target is colored ball, red hit
 targetXRedHit=Target is %s, red hit
 targetXOtherHit=Target is %s, other ball hit
 targetXHitY=Target is %s, %s hit
+targetXPotY=Target is %s, %s potted
 targetColorOtherPot=Non target pots while target is a colored ball
 foulReasonFormat=%s, %d penalty
 indicateXHitY=Indicated target is %s, %s hit
