--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -134,6 +134,7 @@ targetColorRedHit=目标球为彩球，但击打了红球
 targetXRedHit=目标球为%s，但击打了红球
 targetXOtherHit=目标球为%s，但击打了其他球
 targetXHitY=目标球为%s，但击打了%s
+targetXPotY=目标球为%s，但%s落袋
 targetColorOtherPot=击打彩球时有非目标球落袋
 foulReasonFormat=%s，罚%d分
 indicateXHitY=指定目标球为%s，但击打了%s
