--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,15 @@
+===== 0.1.9 =====
+20230430
+
+* AI更新：
+    * AI走位时考虑走位容错率与白球行进距离的关系
+    * 加入了AI轻贴解斯诺克的线路，缓解AI因为未知bug造成弹库之后/大力弧线，造成线路偏差解不到斯诺克的问题
+    * 略微调低了AI打大角度球的权重
+* 快速游戏加入【开发者模式】选项。在开发者模式下：
+    * debug菜单
+    * AI不会自动连续击球
+    * 显示AI的计划白球路线
+
 ===== 0.1.8 =====
 20230427
 
