--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -72,6 +72,7 @@ ruleTableBall=Rule/Table/Ball
 totalFrames=Total Frames
 nylonCloth=Nylon/Cloth
 holes=Pockets
+devMode=Dev mode
 startGame=Start Game
 resumeLastGame=Resume Saved Game
 
