--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -91,6 +91,10 @@ replayLastCue=Last cue
 replayNextCue=Next cue
 replayFastForward=Fast forward
 replayAutoPlay=Auto play
+aiAutoPlay=AI Auto Play
+drawPredictionLine=White prediction line
+drawPredictionLineAi=AI prediction line
+drawPredictionLinePlayer=Player suggestion line
 
 foul=Foul
 scoreDiff=%d difference
