--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -91,6 +91,10 @@ replayLastCue=上一杆
 replayNextCue=下一杆
 replayFastForward=快进
 replayAutoPlay=自动播放
+aiAutoPlay=AI自动击球
+drawPredictionLine=白球划线
+drawPredictionLineAi=AI白球划线
+drawPredictionLinePlayer=预测玩家球路
 
 foul=犯规
 scoreDiff=分差 %d
