--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+===== 0.2.0 =====
+20230513
+
+* 将显示AI计划白球路线改为选项
+* 玩家可以自行选择用左手/右手/架杆击球
+* 实装了袋口的松紧度，并调整了袋角弧线的反弹方向
+
 ===== 0.1.9 =====
 20230430
 
