--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -66,6 +66,8 @@ spinText=Spins
 spinControlText=Spin control
 offHand=Off hand
 restHand=Rest cue
+leftHand=Left
+rightHand=Right
 
 # Fast Game UI
 ruleTableBall=Rule/Table/Ball
