--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+===== 0.2.1 =====
+20230518
+
+* 修改了中袋尺寸算法
+* 将中袋尺寸改为袋口直线尺寸：
+    * 影响直+弯的袋口
+    * 不影响全弯袋口
+* 取消了直袋角与弯袋角的本质区别
+* 加入了美式球桌颗星标记
+* 微调了袋口难度
+
 ===== 0.2.0 =====
 20230513
 
