--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -156,6 +156,8 @@ targetFullHitHalf=Target is full balls, half ball hit
 targetHalfHitFull=Target is half balls, full ball hit
 targetBlackHitOther=Target is number 8, other ball hit
 
+targetXHitYNumbered=Target is number %s, but number %s hit
+
 taunt=LOL
 miscued=Miscued!
 
