--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -156,6 +156,8 @@ targetFullHitHalf=目标球为全色球，但击打了半色球
 targetHalfHitFull=目标球为半色球，但击打了全色球
 targetBlackHitOther=目标球为8号球，但击打了其他球
 
+targetXHitYNumbered=目标球为%d号球，但击打了%d号球
+
 taunt=哈哈哈
 miscued=呲杆了！
 
