--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,10 @@
 * 实装了中式八球的开球失机/美式九球的开球违例和开球犯规
 * 加入了九球的黄金九统计
 * 界面去窗口化
+* bug修复:
+    * 修复了斯诺克自由球让杆给对手自由球的bug
+    * 修复了换手之后键盘操作失效的问题
+    * 修复了让杆时杆的贴图还在的问题
 
 ===== 0.3.0 =====
 20230519
