--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,22 @@
+===== 0.3.2 =====
+20230521
+
+* 新增设置界面
+* 新增快速游戏难度设定
+* 斯诺克AI开球加入预测功能
+* 调整了生涯模式加点：提高了能力接近100时加点的作用
+* bug修复：
+    * 修复了斯诺克最后一颗红球打进但犯规后，对手目标球仍是红球的问题
+    * 修复了获得手中球后，可以摆好了再让对手打的问题
+    * 减少了物理运算卡死，由用户强制中止后，出现无法击打问题的概率
+    * 修复了AI运算卡死后即使退出游戏后台进程仍然运行的问题
+
+===== 0.3.1.1 =====
+20230520
+
+* 修复了生涯模式赛事结束后直接退出游戏的问题
+* 加入了确认退出游戏的弹出框
+
 ===== 0.3.1 =====
 20230520
 
