--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -8,6 +8,9 @@ no=No
 pleaseConfirm=Please Confirm
 warning=Warning
 close=Close
+confirmExitApp=Quit Game?
+confirmExitAppDes=Your progress will be saved.
+backIcon=← Back
 
 # Entry UI
 career=Player
@@ -293,6 +296,21 @@ statsFinalsOver3=Final frames (≥3)
 
 # About UI
 studioName=Trash software studio
+
+# Settings UI
+settingsGame=Game
+settingsGeneral=General
+fastGameAimLineLength=Fast game aiming line length
+fastGameAiStrength=Fast game AI strength
+numAiThreads=AI threads
+resolution=Resolution
+systemZoom=System Zoom
+systemZoomDes=Windows 10 & 11 only
+minimumResolution= (Minimum)
+language=Language
+replayCompression=Replay compression
+confirmSaveChanges=
+confirmDiscardChanges=Are you sure to discard changes?
 
 # Enum names
 snooker=Snooker
