--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -8,6 +8,9 @@ no=否
 pleaseConfirm=请确认
 warning=警告
 close=关闭
+confirmExitApp=退出游戏？
+confirmExitAppDes=游戏进度将会保存。
+backIcon=←
 
 # Entry UI
 career=玩家
@@ -293,6 +296,21 @@ statsFinalsOver3=决胜局(≥3)
 
 # About UI
 studioName=垃圾软件工作室
+
+# Settings UI
+settingsGame=游戏
+settingsGeneral=通用
+fastGameAimLineLength=快速游戏瞄准线长度
+fastGameAiStrength=快速游戏AI强度
+numAiThreads=AI线程数
+resolution=分辨率
+systemZoom=系统缩放
+systemZoomDes=适用于Windows 10及11
+minimumResolution=（最低推荐分辨率）
+language=语言
+replayCompression=游戏录像压缩
+confirmSaveChanges=
+confirmDiscardChanges=确认要舍弃更改吗？
 
 # Enum names
 snooker=斯诺克
