--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+===== 0.3.2.1 =====
+20230522
+
+* 修复了交换击球权时不换手的问题
+* 优化了游戏界面：
+    * 击球之后禁用换手
+    * 增加了出杆动画出错后的冗余度
+* 加大了球桌的圆角
+
 ===== 0.3.2 =====
 20230521
 
