Implemented training/challenge mode

--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -73,6 +73,10 @@ leftHand=Left
 rightHand=Right
 
 # Fast Game UI
+fastGameGame=Match
+training=Training
+trainingItem=Training Item
+trainingChallenge=Challenge
 ruleTableBall=Rule/Table/Ball
 totalFrames=Total Frames
 nylonCloth=Nylon/Cloth
@@ -88,7 +92,7 @@ aiCueText=AI Cue
 aiThinking=Thinking
 gameMenu=Game
 settingsMenu=Settings
-withdraw=Withdraw
+withdraw=Concede
 replaceBallInHand=Place ball in hand
 letOpponentPlay=Let opponent play
 playMenu=Play
@@ -166,6 +170,9 @@ breakFoulDes=Only %d balls touch cushion
 
 targetXHitYNumbered=Target is number %s, but number %s hit
 
+challengeSuccess=挑战成功！
+challengeFailed=挑战失败！
+
 taunt=LOL
 miscued=Miscued!
 
@@ -219,6 +226,8 @@ mainPlaces=Mains
 preMatchPlaces=Qualifiers
 sponsor=Sponsor
 tournamentHighest=Highest break
+careerChallenges=Challenges
+careerChallenge=Challenge
 
 # Rank enums
 champion=Champion
@@ -353,6 +362,14 @@ pocketDiffLoose=Loose
 pocketDiffNormal=Regular
 pocketDiffTight=Tight
 pocketDiffVeryTight=Very Tight
+
+trainingSnakeFull=全蛇彩
+trainingSnakeFullDense=密集蛇彩
+trainingSnakeHalf=半台蛇彩
+trainingSnakeCross=十字蛇彩
+trainingSnakeX=X型蛇彩
+trainingSnakeHullOrdered=全台顺序蛇彩
+trainingSnakeHalfOrdered=半台顺序蛇彩
 
 typePlayer=Player
 typeComputer=Computer
