--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -73,6 +73,10 @@ leftHand=左手
 rightHand=右手
 
 # Fast Game UI
+fastGameGame=比赛
+training=训练
+trainingItem=训练项目
+trainingChallenge=挑战模式
 ruleTableBall=规则/球桌/球
 totalFrames=总局数
 nylonCloth=台尼/桌布
@@ -166,6 +170,9 @@ breakFoulDes=仅有%d颗球碰边
 
 targetXHitYNumbered=目标球为%d号球，但击打了%d号球
 
+challengeSuccess=挑战成功！
+challengeFailed=挑战失败！
+
 taunt=哈哈哈
 miscued=呲杆了！
 
@@ -219,6 +226,8 @@ mainPlaces=正赛名额
 preMatchPlaces=资格赛名额
 sponsor=赞助商
 tournamentHighest=赛事单杆最高
+careerChallenges=球形挑战
+careerChallenge=挑战
 
 # Rank enums
 champion=冠军
@@ -353,6 +362,16 @@ pocketDiffLoose=宽松
 pocketDiffNormal=常规
 pocketDiffTight=紧
 pocketDiffVeryTight=极紧
+
+trainingSnakeFull=全台蛇彩
+trainingSnakeFullDense=密集蛇彩
+trainingSnakeHalf=半台蛇彩
+trainingSnakeCross=T字蛇彩
+trainingSnakeX=X型蛇彩
+trainingSnakeFullOrdered=全台顺序蛇彩
+trainingSnakeHalfOrdered=半台顺序蛇彩
+
+careerTrainingFree=自由训练
 
 typePlayer=玩家
 typeComputer=电脑
