--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -370,6 +370,7 @@ trainingSnakeCross=T字蛇彩
 trainingSnakeX=X型蛇彩
 trainingSnakeFullOrdered=全台顺序蛇彩
 trainingSnakeHalfOrdered=半台顺序蛇彩
+trainingClearColor=点位清彩
 
 careerTrainingFree=自由训练
 
