--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -370,6 +370,7 @@ trainingSnakeCross=十字蛇彩
 trainingSnakeX=X型蛇彩
 trainingSnakeHullOrdered=全台顺序蛇彩
 trainingSnakeHalfOrdered=半台顺序蛇彩
+trainingClearColor=点位清彩
 
 typePlayer=Player
 typeComputer=Computer
