--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -241,8 +241,8 @@ preGames4=Qualifier round 4
 preGames3=Qualifier round 3
 preGames2=Qualifier round 2
 preGames1=Qualifier round 1
-bestSingle=Highest single
-maximum=147
+bestSingle=Highest break
+maximum=Maximum break
 
 # Stage enums
 final=Final
@@ -323,7 +323,7 @@ confirmDiscardChanges=Are you sure to discard changes?
 
 # Enum names
 snooker=Snooker
-miniSnooker=Mini Snooker
+miniSnooker=Six-red snooker
 chineseEight=Chinese Eight-Ball
 lisEight=Li's Eight-Ball
 sidePocket=American Side Pocket
@@ -363,14 +363,14 @@ pocketDiffNormal=Regular
 pocketDiffTight=Tight
 pocketDiffVeryTight=Very Tight
 
-trainingSnakeFull=全蛇彩
-trainingSnakeFullDense=密集蛇彩
-trainingSnakeHalf=半台蛇彩
-trainingSnakeCross=十字蛇彩
-trainingSnakeX=X型蛇彩
-trainingSnakeHullOrdered=全台顺序蛇彩
-trainingSnakeHalfOrdered=半台顺序蛇彩
-trainingClearColor=点位清彩
+trainingSnakeFull=Routine-full
+trainingSnakeFullDense=Routine-dense
+trainingSnakeHalf=Routine-half
+trainingSnakeCross=Routine-cross
+trainingSnakeX=Routine-X
+trainingSnakeHullOrdered=Ordered routine-full
+trainingSnakeHalfOrdered=Ordered routine-half
+trainingClearColor=Color clearance
 
 typePlayer=Player
 typeComputer=Computer
