--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -242,7 +242,7 @@ preGames3=资格赛第三轮
 preGames2=资格赛第二轮
 preGames1=资格赛第一轮
 bestSingle=单杆最高
-maximum=147
+maximum=满分杆
 
 # Stage enums
 final=决赛
@@ -323,7 +323,7 @@ confirmDiscardChanges=确认要舍弃更改吗？
 
 # Enum names
 snooker=斯诺克
-miniSnooker=小斯诺克
+miniSnooker=六红球斯诺克
 chineseEight=中式八球
 lisEight=李式八球
 sidePocket=美式九球
