--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,14 @@
 ===== 0.3.4 =====
-20230527
+20230528
 
 * 生涯模式挑战
 * 修复了桌角被瞄准线染色的bug
 * 缩减生涯模式存档体积：删除了AI球员的等级、经验、技能点等无用的东西
+* 将小斯诺克改为六红球斯诺克
+* 代码结构优化：
+    * 将球桌绘制部分封装
+    * 将部分通用规则统一判定
+    * 清理了部分无用代码
 
 ===== 0.3.3 =====
 20230523
