--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+===== 0.3.5 =====
+20230528
+
+* 实装了部分齿轮效应：
+    * 碰撞造成的旋转
+    * 旋转的传递
+    * 旋转造成的轻微分离角偏差
+* 重命名部分比赛
+
 ===== 0.3.4 =====
 20230528
 
