--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -58,6 +58,8 @@ catProf=Professional
 catAmateur=Amateur
 catNoob=Noob
 catGod=God
+catUnk=Unknown
+catAll=All
 aiming=Aiming
 cuePrecision=Cue precision
 cuePrecisionTooltip=Players with low cue precision might not be able to cue at designated direction.
