--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -58,6 +58,8 @@ catProf=职业选手
 catAmateur=业余选手
 catNoob=菜鸡
 catGod=神
+catUnk=未知
+catAll=全部
 aiming=瞄准
 cuePrecision=出杆准确度
 cuePrecisionTooltip=出杆准确度较低的选手可能无法打中瞄准的方向
