--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,15 @@
+===== 0.3.5.2 =====
+20230528
+
+* 微调了齿轮效应
+* 修复了部分球员不会斯诺克开球的问题
+* 调整了扎杆（依旧不真实）
+* 修复了生涯模式从赛程表界面返回主界面时不刷新的问题
+
 ===== 0.3.5.1 =====
 20230528
 
 * 加入了快速游戏的球员分类筛选
-* 微调了齿轮效应
 
 ===== 0.3.5 =====
 20230528
