--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -320,6 +320,7 @@ systemZoomDes=适用于Windows 10及11
 minimumResolution=（最低推荐分辨率）
 language=语言
 replayCompression=游戏录像压缩
+frameRate=帧率
 confirmSaveChanges=
 confirmDiscardChanges=确认要舍弃更改吗？
 
