--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,10 @@
-===== 0.3.6 =====
+===== 0.3.6.1 =====
 20230529
 
 * 修改了游戏渲染逻辑，避免了运算负载过重时卡死的问题
-* 新增运算帧率选项
+* 新增帧率上限选项
 * 新增实时帧率显示
+* 加入了补帧机制
 * 游戏界面运算优化
 
 ===== 0.3.5.2 =====
