--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -320,7 +320,7 @@ systemZoomDes=Windows 10 & 11 only
 minimumResolution= (Minimum)
 language=Language
 replayCompression=Replay compression
-frameRate=Frame rate
+frameRate=Frame rate limit
 confirmSaveChanges=
 confirmDiscardChanges=Are you sure to discard changes?
 
