--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,19 @@
+===== 0.3.6.2 =====
+20230530
+
+* UI性能优化：
+    * 将帧率上限放宽至500FPS
+    * 弃用Timeline，改为原生的Timer，帧率上升3-4倍
+    * 将白球预测线的物理帧间隔延长
+* 游戏界面加入第二重白球预测线防卡死的保险（应该没用）
+* 预测白球时记录碰撞点
+
 ===== 0.3.6.1 =====
 20230529
 
-* 修改了游戏渲染逻辑，避免了运算负载过重时卡死的问题
+* 修改了游戏渲染逻辑，避免了运算负载过重时卡死的问题：
+    * 上一帧渲染完成前，下一帧不会开始渲染
+* 减少了白球预测线的计算次数：仅用户输入变化时运算
 * 新增帧率上限选项
 * 新增实时帧率显示
 * 加入了补帧机制
